# support-pilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  EVAL_REPORT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/agent/: __init__.py  executor.py  memory.py  prompts.py  react_agent.py
app/api/: auth.py  chat.py  documents.py  evaluation.py  mcp.py  upload.py
app/auth/: jwt.py  permissions.py
app/evaluation/: dataset.py  evaluator.py  metrics.py
app/mcp/: client.py  provider.py
app/rag/: bm25.py  chain.py  embeddings.py  hybrid_retriever.py  intent.py  loader.py  parsers.py  query_expansion.py  reranker.py  vectorstore.py
app/schemas/: models.py
app/tools/: diagnostic.py  rag_tool.py
app/utils/: logger.py  sse.py
data/: eval_report.json
data/bm25_cache/: support_docs.pkl
data/samples/: file_system.txt  ipc.txt  os_general.txt  page_replacement.txt  process_management.txt
frontend/: app.js  index.html  style.css
mcp_server/: config.py  server.py
mcp_server/tools/: jira.py  weather.py
scripts/: run_dev.sh  run_eval.py  seed_docs.py
tests/: conftest.py
tests/api/: test_chat.py  test_upload.py
tests/integration/: test_e2e_chat.py
tests/mcp/: test_provider.py
tests/rag/: test_loader.py
tests/tools/: test_diagnostic.py
