[tool.poetry]
name = "support-pilot"
version = "0.1.0"
description = "智能技术支持 Agent — LangChain ReAct + RAG + MCP"
authors = ["SupportPilot Team"]
readme = "README.md"
packages = [{include = "app"}, {include = "mcp_server"}]

[tool.poetry.dependencies]
python = "^3.10"

# Web 框架
fastapi = ">=0.110.0"
uvicorn = {version = ">=0.29.0", extras = ["standard"]}
pydantic = ">=2.6"
pydantic-settings = ">=2.2"

# LangChain
langchain = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-community = ">=0.2.0"
langchain-text-splitters = ">=0.2"

# MCP
mcp = ">=1.0.0"
langchain-mcp-adapters = ">=0.1"

# RAG
chromadb = ">=0.5.0"
pypdf = ">=4.0"
tiktoken = ">=0.7"
pymupdf = ">=1.24.0"
python-docx = ">=1.1.0"
jieba = ">=0.42"
rank-bm25 = ">=0.2.2"

# OpenAI
openai = ">=1.30"

# 认证
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}

# 辅助
python-dotenv = ">=1.0"
sse-starlette = ">=2.0"
aiofiles = ">=23.0"
httpx = ">=0.27"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
